--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: beige;
+    background-color: rgb(160, 112, 212);
 }
 
 header{
@@ -68,6 +68,16 @@ header{
     position: absolute;
 }
 
+#palabra_secreta span{
+    vertical-align: bottom;
+    font-size: 2em;
+    border-bottom: 4px solid #000;
+    width: 25px;
+    margin-right: 8px;
+    text-align: center;
+    display: inline-block;
+}
+
 .nav_main{
     border: 1px solid pink;
     height: inherit;
@@ -76,8 +86,12 @@ header{
     background-color: floralwhite;
 }
 
-.botones_letras{
+#botones_letras{
     padding: 8px 16px;
+    font-family: "Space Mono",monospace;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
     border-radius: 5px;
     background: linear-gradient(to bottom, #330779, #c510fc);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
