--- a/style.css
+++ b/style.css
@@ -116,3 +116,33 @@ header{
     font-weight: bold;
     width: 5vh;
 }
+
+.fondo{
+    animation:slide 10s ease-in-out infinite alternate;
+    background-image: linear-gradient(-60deg, rgb(213, 8, 236) 50%, rgb(18, 26, 240) 50%);
+    bottom:0;
+    left:-50%;
+    opacity:.5;
+    position:fixed;
+    right:-50%;
+    top:0;
+    z-index:-1;
+}
+  
+.fondo2 {
+    animation-direction:alternate-reverse;
+    animation-duration:4s;
+}
+  
+.fondo3 {
+    animation-duration:5s;
+}
+
+@keyframes slide {
+    0% {
+      transform:translateX(-25%);
+    }
+    100% {
+      transform:translateX(25%);
+    }
+}
