--- a/style.css
+++ b/style.css
@@ -8,34 +8,133 @@ header{
     margin: auto;
 }
 
+    h1 {
+        color: hsla(0, 0%, 0%, .9);
+        font: normal 140px Varela Round, sans-serif;
+        height: 140px;
+        left: 0;
+        letter-spacing: 5px;
+        margin: -80px 0 0 0;
+        text-align: center;
+        text-transform: uppercase;
+        top: 50%;
+        width: 100%;
+        animation: move linear 2000ms infinite; 
+        margin-top: auto; 
+      }
+      
+      @keyframes move {
+        0% {
+          text-shadow:
+            4px -4px 0 rgb(255, 0, 204), 
+            3px -3px 0 rgb(255, 0, 204), 
+            2px -2px 0 rgb(255, 0, 204), 
+            1px -1px 0 rgb(255, 0, 204),
+            -4px 4px 0 hsla(180, 100%, 50%, 1), 
+            -3px 3px 0 hsla(180, 100%, 50%, 1), 
+            -2px 2px 0 hsla(180, 100%, 50%, 1), 
+            -1px 1px 0 hsla(180, 100%, 50%, 1)
+          ;
+        }
+        25% {    
+          text-shadow:      
+            -4px -4px 0 hsla(180, 100%, 50%, 1), 
+            -3px -3px 0 hsla(180, 100%, 50%, 1), 
+            -2px -2px 0 hsla(180, 100%, 50%, 1), 
+            -1px -1px 0 hsla(180, 100%, 50%, 1),
+            4px 4px 0 rgb(255, 0, 204), 
+            3px 3px 0 rgb(255, 0, 204), 
+            2px 2px 0 rgb(255, 0, 204), 
+            1px 1px 0 rgb(255, 0, 204)      
+          ;
+        }
+        50% {
+          text-shadow:
+            -4px 4px 0 rgb(255, 0, 204), 
+            -3px 3px 0 rgb(255, 0, 204), 
+            -2px 2px 0 rgb(255, 0, 204), 
+            -1px 1px 0 rgb(255, 0, 204),
+            4px -4px 0 hsla(180, 100%, 50%, 1), 
+            3px -3px 0 hsla(180, 100%, 50%, 1), 
+            2px -2px 0 hsla(180, 100%, 50%, 1), 
+            1px -1px 0 hsla(180, 100%, 50%, 1)
+          ;
+        }
+        75% {
+          text-shadow:
+            4px 4px 0 hsla(180, 100%, 50%, 1), 
+            3px 3px 0 hsla(180, 100%, 50%, 1), 
+            2px 2px 0 hsla(180, 100%, 50%, 1), 
+            1px 1px 0 hsla(180, 100%, 50%, 1),
+            -4px -4px 0 rgb(255, 0, 204), 
+            -3px -3px 0 rgb(255, 0, 204), 
+            -2px -2px 0 rgb(255, 0, 204), 
+            -1px -1px 0 rgb(255, 0, 204)      
+          ;
+        }
+        100% {
+          text-shadow:
+            4px -4px 0 rgb(255, 0, 204), 
+            3px -3px 0 rgb(255, 0, 204), 
+            2px -2px 0 rgb(255, 0, 204), 
+            1px -1px 0 rgb(255, 0, 204),
+            -4px 4px 0 hsla(180, 100%, 50%, 1), 
+            -3px 3px 0 hsla(180, 100%, 50%, 1), 
+            -2px 2px 0 hsla(180, 100%, 50%, 1), 
+            -1px 1px 0 hsla(180, 100%, 50%, 1)
+          ;
+        }  
+      }
+
+
 .parent_superior{
     display: grid;
     grid-template-columns: auto auto auto;
     margin: auto;
     width: 80vh;
-    height: 5vh;
-    /*border: 1px solid orange;*/
 }
 
-#titulo{
-    height: inherit;
+#timer{
+    display: grid;
+    position: relative;
+    grid-template-columns: auto auto auto;
+    margin: auto;
     width: 60vh; 
     border: 1px solid orange;
-    text-align: left;
+    text-align: center;
     align-items: center;
     border-radius: 5vh 0 0 0 ;
     background-color: azure;
     padding-left: 1vh;
 }
 
+h2{
+  font-family: 'Press Start 2P', sans-serif;
+}
+
+
+#timer_block #intentos #record_actual{
+  margin: auto;
+  width: fit-content;
+  border: 1vh;
+}
+
+
 #records{
-    height: inherit;
+    display: grid;
+    grid-template-columns: auto auto auto;
     width: 20vh;
     border: 1px solid orange;
     text-align: right;
     border-radius: 0 5vh 0 0;
     background-color: azure;
     padding-right: 1vh;
+}
+
+#records_block{
+    margin: auto;
+    margin-left: 5vh;
+    width: fit-content;
 }
 
 
@@ -62,14 +161,34 @@ header{
     border: 1px solid black;
     width: 40vh;
     height: 30vh;
-    margin: auto;
     margin-left: 10vh;
 }
 
-#boton_juego_nuevo{
-    width: auto;
-    
+
+#boton_juego_nuevo {
+    position: absolute;
+    margin: auto;
+    margin-left: 23vh;
+    margin-top: 15vh;
+
+    background-color: #ffcc00;
+    color: #333;
+
+    font-size: 18px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+
+    cursor: pointer;
+    font-family: 'Press Start 2P', sans-serif; /* Fuente retro */
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+   
 }
+
+#boton_juego_nuevo:hover {
+    background-color: #ffdd55;
+}
+
 
 #container_palabra_secreta{
     width: auto;
@@ -116,6 +235,11 @@ header{
     font-weight: bold;
     width: 5vh;
 }
+
+#botones_letras :hover{
+    background-color:lightgreen;
+}
+
 
 .fondo{
     animation:slide 10s ease-in-out infinite alternate;
